fix(ui): Emote Overlaps Text (#3069)
- Twitch revised certain global emotes to be rectangular.
- This broke our fixed-width CSS for it, causing emotes to overlap text.

--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -156,7 +156,6 @@
         .chatEmoticon {
             position: relative;
             height: 28px;
-            width: 28px;
             display: inline-block;
         }
         .highlightText {
